# RustDynoMCP

./: pyproject.toml  server.py
tests/: conftest.py  test_add_board.py  test_create_project.py  test_get_board.py  test_helpers.py  test_list_boards.py  test_project_settings.py
tests/fixtures/boards/: esp32c3.toml  microbit-v2.toml  no-new-project.toml  rpi-pico.toml
