[project]
name = "rustdyno-mcp"
version = "0.1.0"
description = "MCP server for rustdyno embedded Rust project tooling"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
